# smarthop

./: LICENSE  MANIFEST.in  README.md  pylintrc  setup.cfg  setup.py
smarthop/schemas/: sr920_config.schema.json
smarthop/sr920/: __init__.py  command.py  commands.json  enums.py  protocol.py  sr920.py
tests/: test_sr920_command.py  test_sr920_config_schema.py
