[metadata]
name = smarthop
version = 0.1a1
description = Package for handling OKI SmartHop wireless modules
long_description = file:README.md
url = https://github.com/556adarah/smarthop
author = 556adarah
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pyserial >=3.0
