[metadata]
name = smarthop
version = 0.1b2
description = Package for handling OKI SmartHop wireless modules
long_description = file:README.md
url = https://github.com/556adarah/smarthop
author = 556adarah
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires =
    jsonschema
    pyserial >=3.0
    tqdm
